--- a/UserControls/UC_Home.resx
+++ b/UserControls/UC_Home.resx
@@ -121,7 +121,7 @@
   <data name="PictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAlgAAAJYCAYAAAC+ZpjcAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DwAACw8BkvkDpQAA/7JJREFUeF7svXeAHcWVLj7KeYgmGAMimRxMEBI5Y3uD38Zn7/5239v3Njib6GyD
+        DgAACw4BQL7hQQAA/7JJREFUeF7svXeAHcWVLj7KeYgmGAMimRxMEBI5Y3uD38Zn7/5239v3Njib6GyD
         sw0LIgkBb+195u2uvetAECCUcwAEKE5QQoBAeUYz0kgTbvf5fd93qvr2jEZCEpIYSf3HuZVOnTp1qm+f
         r6uqqytSs0ozqyiooIIKKuhAoKRHPp1Y2j2fLuhAp/bjX9AHRpUFwCqooIOEErPC0R5slNi2zjYtIY/E
         cjrjNviA6JQ7OOeUZYH3AKbiv1HQXqBK/XTILKiggroqdeYwCzrIKemRbnfWoq0ytVbc4wmUmCZf5CVw
@@ -5033,7 +5033,7 @@
   <data name="BtnRefresh.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAKYAAACnCAYAAACb1CfSAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAbq1JREFUeF7tvQeYVFd2rl2hMzQghKRJd2Y8tv/fY/vavtf27+fOzJ0Z2aNAVACh
+        DwAACw8BkvkDpQAAbq1JREFUeF7tvQeYVFd2rl2hMzQghKRJd2Y8tv/fY/vavtf27+fOzJ0Z2aNAVACh
         iBLKOYwyDEKIKJDIGTonogAhIZIQQglEzjk2OTV0Tuv/vn32PrXr9OmmG6olxprzPB9Vfarorjr11rfW
         2jEgIt9r1dZIuEYkVF4rKcW1cs05kV+eEbn2lMi9J6HjIn2oE9Ax6IhI3iGRL40OQgdE9hnxZ6oQOorn
         8v/w/1L8PebnIvyNMpFrivH3SnBbIZJShddRXSshvia/1/p9ku/Jy0s1zfIh1dZWq99bLbUOlBpIwrZT
@@ -5511,7 +5511,7 @@
   <data name="BtnAddAray.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAKYAAACmCAYAAABQiPR3AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAZ2pJREFUeF7tvQd4lNeZ/i3ANAGi925sbIqNjQHjgum99yIQ1eBeUzbZJHayLZuN
+        DwAACw8BkvkDpQAAZ2pJREFUeF7tvQd4lNeZ/i3ANAGi925sbIqNjQHjgum99yIQ1eBeUzbZJHayLZuN
         k02ym80/X7JJ7NjYjgu99ybb2Mb0DkIUdQnRBRL399znzDNz5p13RhIC27vr4bqvmXklVGZ+up9yWhyA
         /9MqQlGFQlxLKMDlVhdxftJ55L6ei8zkkziFQziCz7EbW/ARlmMN3r+2EK9fegu/y/8jfpXzn/j3rP8w
         +mXmr41+nvkr0S/xbxm/wM+zXpPP+Q3+3/k/4M+XXsc7V9/DEqzAJmzDp/I1D+I4UpGGTOQln8WFVy7i
@@ -5955,10 +5955,10 @@
         Fl5OYBP8amFh+auF18sXXvcH0Sv3d/6fJ8T9/6xHcNQUtqbeAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="Button1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="BtnPrev.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAKYAAACmCAYAAABQiPR3AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAbFRJREFUeF7tnQd8lFW6/wNICxB67yIoRVGaiCC9914CCU1AsW9vV929W+5e3Xqv
+        EAAACxABrSO9dQAAbFRJREFUeF7tnQd8lFW6/wNICxB67yIoRVGaiCC9914CCU1AsW9vV929W+5e3Xqv
         6/W/xbWhLiq99xakSq+BEEp6pyUk/P7P75w5M2feeWcyCeB6S/h8P5O8CZDMfPOUc857TgSA/9UUoahc
         IW5F5eNGi2vIm5KHzPcykRp3EZdwGmdxAEewA7uxGhvw2a2leO/6R3g75y/4fcZ/4ndp/6H4beofFG+k
         /l74Lf495Td4I+1N+Zo/4r/y/ox3r7+HTwoWYwXWYBt2YZ/8m6dwHolIQiqy4rJx9dVruNk2H7fq30Jh
@@ -6423,10 +6423,10 @@
         iOIgeEFhYdmCwttlC2+7i+jE/pn/+4GI/w8x0nLF/gSXvQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="Button2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="BtnNext.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAKYAAACmCAYAAABQiPR3AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAbNRJREFUeF7tnQd4lNeZ/YUxHUQ3mI6xsQFXmnGh9947iGpwb2mbbDZ2kk02m41T
+        EAAACxABrSO9dQAAbNRJREFUeF7tnQd4lNeZ/YUxHUQ3mI6xsQFXmnGh9947iGpwb2mbbDZ2kk02m41T
         N443/xTHjo0Ltum9N9kGg+kdhCjqEkI0gcT5v+feeWfufPPNqACOtwzPeWbmk1CZ+em85bY4AP+rVYjC
         sgW4Gp+PS80uIG9cHrLfykZ64kmcwiEcwXbsxiZ8iqVYhY+uzsdbF9/FG7l/xm+yfo9fZ/yn0a/Sf2v0
         i/TfiH6F/0j7JX6R8Zp8zu/wX3l/wpsX38L7V+ZiEZZhA7Zgm3zNgziOZKQgHTmJZ3H+lQu43CofV+td
