--- a/UserControls/UC_Schedule.resx
+++ b/UserControls/UC_Schedule.resx
@@ -553,7 +553,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;DgvSchedule.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>7</value>
   </data>
   <data name="pnlFilter.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -564,7 +564,7 @@
   <data name="btnToPDF.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAKkAAACpCAYAAABQ1R0vAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAOppJREFUeF7t3UmzLHd553G1HR1eeOGNN34D7Lz0trf9IgjbAVwU4CEMAoNBZkaA
+        EAAACxABrSO9dQAAOppJREFUeF7t3UmzLHd553G1HR1eeOGNN34D7Lz0trf9IgjbAVwU4CEMAoNBZkaA
         QAwGJCExGCEmM9hMzWhACBDIwvNAgG3aYGhAELaAZmzk6vrmvd9zfvWc55+VVafOHcTNiN+tOllz5uc8
         /yHz1L1mtVpdzSXMT//fT3/uJz/5yX/nsrv9albXtCuvZnXNgw8++N9+/OMf/8IPf/jDX/re9773sP/4
         j//4n/fff/91X/va1+78yle+8okvf/nL92b+7d/+7W8zX/rSl75guP0b3/jGMx544IFf4/kAyfN3r9mt
@@ -850,7 +850,7 @@
   <data name="btbPrint.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAKkAAACpCAYAAABQ1R0vAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAPNlJREFUeF7tnVm3JFWZ/unu9V990Rd90zf9Bbzzsm/71g/BUhdQsMBhqWijgoCK
+        EAAACxABrSO9dQAAPNlJREFUeF7tnVm3JFWZ/unu9V990Rd90zf9Bbzzsm/71g/BUhdQsMBhqWijgoCK
         qIXIJJNMylQgkzLIrAgiiKgMiiAKAgUylVBFMYlg/uMX5zx5nnjz3Tsi8uQZiqpY6zkRuTMiM3LHL5/3
         3UPG2W8ymezTBurdf7z7r++8887/Y509v0+T/dLCfZrs99577/3L3//+939/6623/nP37t0feOWVVz70
         0ksvHf7cc89d/Mwzz9z59NNP3+d66qmnHnI9+eSTf5R4/oUXXjh2586d/8PrASSvn71nVr63Ky3c2wQY
@@ -2414,7 +2414,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;pnlFilter.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>6</value>
   </data>
   <data name="GBSumInf.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -4028,7 +4028,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;GBSumInf.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>5</value>
   </data>
   <data name="GBSumFin.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -5252,7 +5252,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;GBSumFin.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>4</value>
   </data>
   <data name="BtnNext.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Right</value>
@@ -5752,7 +5752,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;BtnNext.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
   </data>
   <data name="BtnPrev.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Right</value>
@@ -6250,7 +6250,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;BtnPrev.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>3</value>
   </data>
   <data name="LPage.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Right</value>
@@ -6283,6 +6283,33 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;LPage.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="Label22.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="Label22.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1126, 605</value>
+  </data>
+  <data name="Label22.Size" type="System.Drawing.Size, System.Drawing">
+    <value>45, 13</value>
+  </data>
+  <data name="Label22.TabIndex" type="System.Int32, mscorlib">
+    <value>111</value>
+  </data>
+  <data name="Label22.Text" xml:space="preserve">
+    <value>Label22</value>
+  </data>
+  <data name="&gt;&gt;Label22.Name" xml:space="preserve">
+    <value>Label22</value>
+  </data>
+  <data name="&gt;&gt;Label22.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;Label22.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;Label22.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
